# ths-favorite

./: .gitignore  README.md  TUTORIAL.md  _protobuf.py  api.py  auth.py  blockstock.py  client.py  collection.py  config.py  constant.py  cookie.py  dynamicplate.py  exceptions.py  favorite.py  main.py  models.py  pyproject.toml  requirements.txt  selfstock_v1.py  selfstock_v2.py  service.py  storage.py  utils.py
docs/superpowers/plans/: 2026-03-24-auth-and-selfstock-cleanup.md
docs/superpowers/specs/: 2026-03-24-auth-and-selfstock-cleanup-design.md
tests/: test_auth_session_manager.py  test_main_cli_auth_defaults.py  test_pure_functions.py  test_selfstock_cli.py  test_selfstock_protocol.py  test_selfstock_service.py
tests/integration/: test_batch.py  test_batch2.py  test_final.py  verify_batch.py
