[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ths-favorite"
version = "0.1.0"
description = "A tool for managing Tong Hua Suo stock favorites"
authors = [
    {name = "sunnysab"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"

dependencies = [
    "loguru",
    "cryptography",
    "protobuf>=5.0",
    "requests",
]

[project.optional-dependencies]
cli = [
    "tabulate",
    "wcwidth",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[project.urls]
Homepage = "https://github.com/sunnysab/ths-favorite"
Repository = "https://github.com/sunnysab/ths-favorite"

[tool.setuptools]
py-modules = [
    "api",
    "auth",
    "client",
    "config",
    "constant",
    "cookie",
    "exceptions",
    "main",
    "models",
    "service",
    "storage",
    "utils",
]
