[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ths-favorite"
version = "0.1.0"
description = "A tool for managing Tong Hua Suo stock favorites"
authors = [
    {name = "sunnysab"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"

dependencies = [
    "loguru",
    "cryptography",
    "protobuf>=5.0",
    "requests",
]

[project.optional-dependencies]
cli = [
    "tabulate",
    "wcwidth",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[project.urls]
Homepage = "https://github.com/sunnysab/ths-favorite"
Repository = "https://github.com/sunnysab/ths-favorite"

[tool.setuptools]
py-modules = [
    "_protobuf",
    "api",
    "auth",
    "blockstock",
    "dynamicplate",
    "client",
    "config",
    "constant",
    "cookie",
    "exceptions",
    "main",
    "models",
    "selfstock_v1",
    "selfstock_v2",
    "service",
    "storage",
    "utils",
]
